# starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  QUALITY.md  format.sh  pyproject.toml  quality-strict.sh  quality.sh
.claude/: settings.local.json
backend/: ai_generator.py  app.py  search_tools.py  vector_store.py
backend/tests/: FIXES_APPLIED.md  README.md  TEST_RESULTS.md  conftest.py  test_ai_generator.py  test_api.py  test_course_search_tool.py  test_rag_integration.py  test_vector_store.py
frontend/: index.html  script.js  style.css
