[project]
name = "starting-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb==1.0.15",
    "anthropic==0.58.2",
    "sentence-transformers==5.0.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
# Pytest configuration for cleaner test execution
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
addopts = [
    "-v",                          # Verbose output
    "--strict-markers",            # Raise error on unknown markers
    "--tb=short",                  # Shorter traceback format
    "--disable-warnings",          # Disable warnings in output
    "-ra",                         # Show summary of all test outcomes
]

# Markers for organizing tests
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may be slow)",
    "api: API endpoint tests",
]

# Asyncio configuration
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
